fix overflow

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden; /* This prevents horizontal scrolling */
+
 }
 
 .page-content {
