--- a/styles/stylePage1.css
+++ b/styles/stylePage1.css
@@ -183,7 +183,7 @@
         font-size: small;
         font-family: cursive;
         position: relative;
-        margin-top: -20vh;
+        margin-top: -1px;
         margin-bottom: 10vh;
           }
     
